   Setting it to false causes the underlying IReadConnector not to be physically
   reconnected on every poll (useful when the underlying reader is JDBCReadConnector). 
   
 * WebServiceListeningReadConnector - changed default namespace in the response.
   Exposed queueSize and queueLimit via JMX.  
   
Processors
==========
 
 * ExceptionToOrderedMapConvertor - correct detection of the message data type.

 * Added Legacy DataObject type filter (& corresponding example)

Examples
========

 * Added example of a Sybase event driven read connector 
   (example\spring\connectors\db\sybase\event.xml). 

 * Modified looping/cronnable connector examples as per comments above.
 
 * Added new example to illustrate how to mark data as processing/processed when
   reading from database (example\spring\connectors\db\reader2.xml)
   
 * Added example to illustrate how legacy 'Inspectors' may be approximated using scripts
   (example\spring\processors\script\script-inspector.xml)
   
 * Added examples for new ISQLWriter implementations in example\spring\connectors\db  
   (xml-table-writer.xml and xml-storedproc-writer.xml)

Miscellaneous
=============

 * Adaptor class has two static utility methods for programmatic invocation of adaptors.
   Simple.java (in example/src/...) demonstrates usage.
   
 * Adaptor class now supports an extra property "timeoutMs". This is a timeout measured
 	 in milliseconds which will be applied as an override to all connector read timeouts.
   
 * Migration guidelines (draft): www/migration.html 
 
 * DocumentMapFacade allows setting and retrieving prefixes for the default namespace. 
   This prefix can be used with xpath. See setDefaultNamespacePrefix(String prefix) 
   and getDefaultNamespacePrefix(). 
 	

Bug Fixes
=========

SC48: Transaction rollback when handling exceptions from IWriteConnectors.

SC53: A failed JMSConnection close does not clear the reference to the underlying jms connection.
